Fixed padding and spacing

--- a/one-page-wonder-jekyll/assets/app.css
+++ b/one-page-wonder-jekyll/assets/app.css
@@ -49,7 +49,7 @@
 
 .section {
 	box-shadow: 0px 0px 5px 0px #000000;
-	padding: 0.1% 2%;
+	padding: 1% 2%;
 	margin: 40px 0px 40px 0px;
 	background-color: rgba(223, 239, 255, 0.8);
 }
